[gd_scene load_steps=8 format=3 uid="uid://d1g20g4jm07w8"]

[ext_resource type="Script" uid="uid://bvhe8h605bs38" path="res://scripts/ending.gd" id="1_5u7d7"]
[ext_resource type="Texture2D" uid="uid://bu0mc3jwnc5w4" path="res://assets/key.png" id="2_p7sb7"]
[ext_resource type="Texture2D" uid="uid://bq6gsvqhdd4nl" path="res://assets/gear_puzzle/gear_gold.png" id="3_xp0iw"]
[ext_resource type="Texture2D" uid="uid://bqg32t0csa47s" path="res://assets/lever/tmp_left.png" id="4_dqqf0"]
[ext_resource type="Texture2D" uid="uid://bqk1spc56xoml" path="res://assets/lever/tmp_right.png" id="5_7yh32"]
[ext_resource type="Script" uid="uid://mny44xf3gyp8" path="res://addons/Godot-GameJolt-API-8cb769529937c0bf2983206f338ac20551d14b8b/main.gd" id="6_sy8ce"]

[sub_resource type="SpriteFrames" id="SpriteFrames_q1xyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_dqqf0")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_7yh32")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[node name="ending" type="Node2D"]
position = Vector2(-4, -16)
script = ExtResource("1_5u7d7")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 68.0
offset_top = 40.0
offset_right = 1212.0
offset_bottom = 288.0
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center]Thanks for playing!"
shortcut_keys_enabled = false

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 276.0
offset_top = 176.0
offset_right = 996.0
offset_bottom = 600.0
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Congratulations, you completed the game in:"

[node name="error" type="RichTextLabel" parent="."]
visible = false
offset_left = 404.0
offset_top = 576.0
offset_right = 852.0
offset_bottom = 1000.0
theme_override_colors/default_color = Color(0.576471, 0.0705882, 0.0705882, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]An error has occured, please check you internet connection or try again later"

[node name="completion_time_text" type="RichTextLabel" parent="."]
offset_left = 548.0
offset_top = 232.0
offset_right = 708.0
offset_bottom = 280.0
tooltip_text = "Timer"
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center] 00:00:00"

[node name="Button" type="Button" parent="."]
offset_left = 524.0
offset_top = 632.0
offset_right = 740.0
offset_bottom = 688.0
theme_override_font_sizes/font_size = 30
text = "Back to menu"

[node name="upload" type="Button" parent="."]
offset_left = 465.0
offset_top = 432.0
offset_right = 799.0
offset_bottom = 488.0
theme_override_font_sizes/font_size = 30
disabled = true
text = "Upload to leaderboard"

[node name="name" type="LineEdit" parent="."]
offset_left = 527.0
offset_top = 328.0
offset_right = 739.0
offset_bottom = 376.0
placeholder_text = "Name"
max_length = 20

[node name="Sprite2D5" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(108, 192)
rotation = 0.877114
scale = Vector2(6.35944, 5.92543)
texture = ExtResource("2_p7sb7")

[node name="Sprite2D6" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1156, 432)
rotation = 0.877114
scale = Vector2(6.35944, 5.92543)
texture = ExtResource("2_p7sb7")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(172, 360)
scale = Vector2(2.53226, 2.52829)
texture = ExtResource("3_xp0iw")

[node name="Sprite2D3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(988, 640)
scale = Vector2(2.53226, 2.52829)
texture = ExtResource("3_xp0iw")

[node name="Sprite2D4" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1188, 112)
scale = Vector2(2.53226, 2.52829)
texture = ExtResource("3_xp0iw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(92, 592)
rotation = 0.801978
scale = Vector2(5.055, 5.055)
sprite_frames = SubResource("SpriteFrames_q1xyl")
animation = &"off"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1188, 280)
rotation = -0.615
scale = Vector2(5.055, 5.055)
sprite_frames = SubResource("SpriteFrames_q1xyl")
animation = &"off"

[node name="toni_easter_egg_button" type="TextureButton" parent="."]
offset_left = 572.0
offset_top = 232.0
offset_right = 692.0
offset_bottom = 272.0
tooltip_text = "Timer"

[node name="GameJoltAPI" type="HTTPRequest" parent="."]
script = ExtResource("6_sy8ce")
private_key = "ba60e79f2baa2b310587a973326cdd97"
game_id = "885910"
metadata/_custom_type_script = "uid://mny44xf3gyp8"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="upload" to="." method="_on_upload_pressed"]
[connection signal="text_changed" from="name" to="." method="_on_name_text_changed"]
[connection signal="pressed" from="toni_easter_egg_button" to="." method="_on_toni_easter_egg_button_pressed"]
[connection signal="gamejolt_request_completed" from="GameJoltAPI" to="." method="_on_request_completed"]
